--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,13 +1,8 @@
 @charset "UTF-8";
 
-// 1. Configuration and helpers
-@import 'abstracts/variables', 'abstracts/functions', 'abstracts/mixins';
-
-// 2. Vendors
-@import 'vendors/normalize';
-
-// 3. Base stuff
-@import 'base/base', 'base/fonts', 'base/typography', 'base/helpers';
+@import 'base', 'fonts', 'typography', 'helpers';
+@import 'normalize';
+@import 'functions', 'mixins';
 
 .weather-app {
   display: flex;
@@ -18,4 +13,12 @@
 .weather-app__information {
   display: flex;
   flex-direction: column;
+  width: 70%;
+}
+
+@media (max-width: 768px) {
+  .weather-app {
+    display: flex;
+    flex-direction: column;
+  }
 }
