--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,7 +12,7 @@
 
 .weather-app__information {
   width: 70%;
-  margin: 0 auto;
+  margin: 3.25rem auto;
   max-width: 728px;
   display: flex;
   flex-direction: column;
