--- a/src/components/TodayHighlights/TodayHighlights.scss
+++ b/src/components/TodayHighlights/TodayHighlights.scss
@@ -1,19 +1,51 @@
 .weather-app__todays-highlights {
 }
 
-.weather-app__todays-highlights__container {
+.weather-app__todays-highlights > h2 {
+  margin: 0;
+  margin-bottom: 2rem;
 }
 
-.weather-app__todays-highlights__wind-status {
+.weather-app__todays-highlights__container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 3rem;
+}
+
+.weather-app__todays-highlights__wind-status > h3,
+.weather-app__todays-highlights__humidity > h3,
+.weather-app__todays-highlights__visibility > h3,
+.weather-app__todays-highlights__air-pressure > h3 {
+  margin: 0;
+  font-weight: 500;
+  font-size: 1rem;
+  text-align: center;
+  margin-bottom: 0.375rem;
+}
+
+.weather-app__todays-highlights__wind-status,
+.weather-app__todays-highlights__humidity,
+.weather-app__todays-highlights__visibility,
+.weather-app__todays-highlights__air-pressure {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #1e213a;
+  padding: 1.375rem 0;
 }
 
 .weather-app__todays-highlights__wind-status__speed {
+  font-size: 4rem;
+  font-weight: 700;
+  margin-bottom: 2rem;
+  & > span {
+    font-weight: 500;
+    font-size: 2.25rem;
+  }
 }
 
 .weather-app__todays-highlights__wind-status__direction {
-}
-
-.weather-app__todays-highlights__humidity {
+  font-size: 0.875rem;
 }
 
 .weather-app__todays-highlights__humidity__percentage {
@@ -22,13 +54,7 @@
 .weather-app__todays-highlights__humidity__percentage-bar {
 }
 
-.weather-app__todays-highlights__visibility {
-}
-
 .weather-app__todays-highlights__visibility__amount {
-}
-
-.weather-app__todays-highlights__air-pressure {
 }
 
 .weather-app__todays-highlights__air-pressure__level {
