--- a/src/components/TodayHighlights/TodayHighlights.scss
+++ b/src/components/TodayHighlights/TodayHighlights.scss
@@ -46,6 +46,17 @@
 
 .weather-app__todays-highlights__wind-status__direction {
   font-size: 0.875rem;
+  color: #e7e7eb;
+
+  & > span:first-child {
+    background: rgba(255, 255, 255, 0.3);
+    padding: 0.5rem;
+    border-radius: 100%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 0.375rem;
+  }
 }
 
 .weather-app__todays-highlights__humidity__percentage {
