--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -3,6 +3,7 @@
   height: 100%;
   position: relative;
   width: 30%;
+  position: relative;
 }
 
 .weather-app__sidebar::before {
@@ -20,6 +21,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  z-index: 1;
 }
 
 .weather-app__sidebar__top-section {
@@ -34,6 +36,8 @@
   padding: 0.75rem 1.75rem;
   background: #6e707a;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+  z-index: 2;
 }
 
 .weather-app__sidebar__current-location {
