--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -48,7 +48,9 @@
   aspect-ratio: 1/1;
   font-size: 28px;
   padding: 0.5rem;
+  cursor: pointer;
   border-radius: 100%;
+  z-index: 10;
 }
 
 .weather-app__sidebar__icon {
