--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,18 +1,17 @@
 .weather-app__sidebar {
   background: #1e213a;
-  height: 100%;
   position: relative;
   width: 30%;
-  position: relative;
 }
 
-.weather-app__sidebar::before {
+.weather-app__sidebar::after {
   content: '';
   background-image: url(../../assets/Cloud-background.png);
   background-repeat: no-repeat;
   background-position: 50% 25%;
   position: absolute;
   inset: 0;
+  height: 100%;
   opacity: 0.05;
 }
 
@@ -21,7 +20,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  z-index: 1;
+  z-index: 10;
 }
 
 .weather-app__sidebar__top-section {
@@ -112,7 +111,7 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   .weather-app__sidebar {
     width: 100%;
   }
@@ -122,9 +121,9 @@
   }
 
   .weather-app__sidebar__icon {
-    margin-bottom: 4.75rem;
+    margin-bottom: 0.75rem;
   }
   .weather-app__sidebar__location {
-    margin-bottom: 6.5rem;
+    padding-bottom: 6.5rem;
   }
 }
